--- a/src/Components/styles/productCard.css
+++ b/src/Components/styles/productCard.css
@@ -518,7 +518,7 @@ border: 1px solid red;
  
 }
 
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 450px) {
   .increase-decrease-btns {
     /* flex-direction: column; */
     padding: 0rem 0rem;
